--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "sync:wix-products": "node scripts/sync-wix-products.mjs"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "lucide-react": "^0.575.0",
     "next": "16.1.6",
     "react": "19.2.3",
