--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-hook-form": "^7.71.2",
     "sonner": "^2.0.7",
     "swr": "^2.4.0",
     "zustand": "^5.0.11"
